# SDK

./: .gitignore  HLBA.py  LICENSE  README.md  api.py  cli.py  main.py  plan.md  pyproject.toml  requirements.txt
config/: game.py  official_data.py  paths.py  settings.py
core/: api_registry.py  client.py  crypto.py  error.py  error_codes.py  i18n.py  official_data.py  official_table_parser.py  packet.py  protocol.py  schema.py  session_lifecycle.py  student_data.py  table_crypto.py
core/data/: error_codes.json  messages.json  protocols.json  request_protocols.json  request_schemas.json
database/: session.py
docs/: architecture.md  development.md  error.md  protocols.md
docs/api/: auth.md
docs/architecture/: module_rules.md  roadmap.md
docs/protocols/: Academy.md  Account.md  Attachment.md  Attendance.md  BattlePass.md  Billing.md  Cafe.md  Campaign.md  Character.md  CharacterGear.md  Clan.md  ClearDeck.md  Conquest.md  ContentLog.md  ContentSave.md  ContentSweep.md  Craft.md  CumulativeTimeReward.md  DailyRecord.md  Echelon.md  EliminateRaid.md  Equipment.md  Event.md  EventContent.md  Field.md  Friend.md  Item.md  Mail.md  Management.md  MemoryLobby.md  MiniGame.md  Minigame_protocols.md  Mission.md  MomoTalk.md  MultiFloorRaid.md  NetworkTime.md  None.md  Notification.md  OpenCondition.md  Option.md  (+18 more)
docs/wiki/: README.md  features.md  reference.md
docs/wiki/base/: auth.md  official-data.md
docs/wiki/example/: README.md  complete_daily_tasks.py
docs/wiki/player/: README.md  academy.md  attendance.md  battle-pass.md  billing.md  cafe.md  game-account.md  game-readonly.md  mail.md  mission.md  momotalk.md  readonly-extended.md  shop.md  state-changing.md  sweep.md
examples/: android_mobile_login.ps1
game/player/cafe/: service.py
headlessba/config/: paths.py
headlessba/core/: crypto.py  protocol.py
headlessba/core/data/: request_protocols.json
headlessba/game/: __init__.py
headlessba/modules/auth/: flows.py  login.py  nexon_login.py  toysdk_android.py  toysdk_models.py  toysdk_native.py
modules/auth/: equivalence.py  flows.py  login.py  nexon_login.py  nexon_web.py  proof_token.py  service.py  toysdk_android.py  toysdk_models.py  toysdk_native.py
modules/game/: base.py  common.py
modules/runtime/: __init__.py  android_mobile_profile.py  android_runtime_profile.py  ngsm_token.py  ngsx_attestation.py  ngsx_native_sim.py  region_config.py  runtime_config.py  runtime_profile_generator.py
src/headlessba/: __init__.py  cli.py
tests/: test_android_runtime_profile.py  test_ba_replay.py  test_login_equivalence.py
tools/: generate_runtime_profile.py  nexon_playwright_login.py  nexon_webview_login.py  ngsx_android_bridge.py  verify_ba_replay.py  verify_login_equivalence.py
utils/: proxy.py
(+71 files in other folders)
