[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headless-bluearchive"
version = "0.1.0"
description = "Headless Blue Archive automation foundation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Gaimoydev" }]
dependencies = [
    "requests>=2.32",
    "httpx>=0.27",
    "cryptography>=42",
    "pycryptodome>=3.20",
    "randomandroidphone==0.10",
    "tqdm>=4.66",
    "flatbuffers>=25.2.10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools]
py-modules = ["HLBA"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "modules*", "utils*"]
namespaces = true

[tool.setuptools.package-data]
"core" = ["data/*.json"]

[tool.ruff]
line-length = 120
target-version = "py311"
